
V0.2.0	* 2015-00-00 * jph * https://github.com/jphaenlin/Petri-Foo

	* enh github#1 : Ability to read loop points in the wav file
	* bug github#2 : The release time of the EG is too short
	* enh github#3 : Compilation errors with gcc 4.8.3

2012-08-06 James Morris <james@jwm-art.net>

	* patch_set_and_get.c, lfopar_from_id: found nasty side
	  effect where an lfo id was calculated from a modulation
	  source id from within an assert... eeek!

	* gui/mod_section.[ch]: remove mod_section_set_list_*
	  these two functions were unused.

	* midi.c: replace some debug with errmsg.

	* patch_private/ move initialization of adsr parameters
	  from within patch_data.c to patch_voice.c

	* make building of "sandbox test code" into an option
	  no longer dependant on debug build.


2012-08-05 James Morris <james@jwm-art.net>

	* only get port data when auto-connect, plus
	  free data obtained.

	* don't resample audio files when JACK is not
	  running (for debug/test).

	* remove MODAL property from audio-settings
	  dialog.

	* #define NDEBUG so assert are disabled when
	  building for release.

2012-08-02 James Morris <james@jwm-art.net>

	* dish_file.c: call xmlFreeDoc on sucessful read.
	* dish_file.c: free str from xmlGetProp.
	* patch_voice.c: free voice data.
	* patch_data.c: call lfo_free on glfos.
	* patch_data.c: call sample_free.
	* patch_get_name return const char*.

2012-08-02 James Morris <james@jwm-art.net>

        * Petri-Foo 0.1.86

	* Always create session dir for new sessions.

	* Right justify help menu.

2012-07-29 James Morris <james@jwm-art.net>

	* Petri-Foo 0.1.85

	* Again, more information is available by looking at
	  commit message history than reading this file.

	* Non Session Manager support (provided optional
	  dependency on liblo is met).

	* "Full Save" for a more archive friendly save. Saves
	  the .petri-foo dish file under a folder and creates
          symlinks to external samples.

	* Cleanup of cmake listfiles (CMakeLists.txt).
