@@ -39,7 +39,7 @@ test
 CMakeFiles/
 CMakeCache.txt
 cmake_install.cmake
-
 Makefile.am
+install_manifest.txt
 
 sandbox/test
