@@ -22,7 +22,8 @@
     This file is a derivative of a PHAT original, modified 2011
 
     V0.2.0 / jph
-    - bug github#2 : display of value of sliders in tooltip + logarithmic sliders
+    - bug github#2 : display of value of sliders in tooltip
+    - enh github#5 : logarithmic sliders
 */
 
 
@@ -220,7 +221,7 @@ void phin_slider_set_value (PhinSlider* slider, double adj_value)
     gtk_adjustment_set_value (p->adjustment, adj_value);
 
 	/* log slider */
-	if (p->is_log)	// jph github#2
+	if (p->is_log)	// jph github#5
 	{
 		value = log10( ((adj_value * 1000)/scale) +1) / 3;
 	}
@@ -262,16 +263,16 @@ double phin_slider_get_value (PhinSlider* slider)
 
     gdouble lower = gtk_adjustment_get_lower(p->adjustment);
     gdouble upper = gtk_adjustment_get_upper(p->adjustment);
-    gdouble value = 0;
+    gdouble value;
     gdouble prv_value = gtk_adjustment_get_value(p->adjustment_prv);
     gdouble scale = upper - lower;
 
     /* log slider */
-    if (p->is_log)	// jph github#2
+    if (p->is_log)	// jph github#5
     {
         value = (pow( 1000, prv_value) - 1) * scale/1000;
-        if ( value < 0 )
-        	value = 0;
+        if ( value < 0.0 )
+        	value = 0.0;
     }
     /* lin slider */
     else
@@ -1397,7 +1398,7 @@ static void phin_slider_adjustment_value_changed (GtkAdjustment* adj,
     scale = adj_upper - adj_lower;
 
     /* log slider */
-    if (p->is_log)	// jph github#2
+    if (p->is_log)	// jph github#5
     {
 //    	nothing special for log sliders, done at phin_slider_set_value()
     	value = (adj_value - adj_lower) / scale;
