@@ -2,8 +2,11 @@
 V0.2.0	* 2015-00-00 * jph * https://github.com/jphaenlin/Petri-Foo
 
 	* enh github#1 : Ability to read loop points in the wav file
-	* bug github#2 : The release time of the EG is too short
-	* enh github#3 : Compilation errors with gcc 4.8.3
+	* bug github#2 : Make EG times longer
+	* enh github#3 : Suppress compilation errors with gcc 4.8.3
+	* bug github#4 : Add a window and taskbar icon
+	* enh github#5 : Make EG sliders logarithmic
+
 
 2012-08-06 James Morris <james@jwm-art.net>
 
